Updates all the way around, and as it stands this won't run because I'm in the middle of importing tcp_utils routines. About to branch to 'utils_insertion'.

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 
-CFLAGS = -g --std=gnu99
+CFLAGS = --std=gnu99 -Wall -g #-O2
 SERVER = server
 CLIENT = client
 FILEPARSE = tcp_fileparse
