--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,17 +1,24 @@
 CC = gcc
 
 CFLAGS = --std=gnu99 -Wall -g #-O2
+
 SERVER = server
 CLIENT = client
+
 FILEPARSE = tcp_fileparse
+
+TCP_TSTAMP = tcp_tstamp_to_ascii
 
 #SRC = $(SERVER).c $(CLIENT).c 
 FILEPARSE_SRC = tcp_fileparse.c tcp_utils.c
 FILEPARSE_OBJ = $(FILEPARSE_SRC:.c=.o)
 
+TCP_TSTAMP_SRC = tcp_tstamp_to_ascii.c
+TCP_TSTAMP_OBJ = $(TCP_TSTAMP_SRC:.c=.o)
+
 HEADERS = tcp_fileparse.h tcp_utils.h
 
-all: $(SERVER) $(CLIENT) $(FILEPARSE)
+all: $(SERVER) $(CLIENT) $(FILEPARSE) $(TCP_TSTAMP)
 
 $(SERVER):
 	$(CC) -o $@ $@.c $(CFLAGS)
@@ -24,6 +31,9 @@ $(FILEPARSE): $(FILEPARSE_OBJ)
 
 .c.o: $(HEADERS)
 	$(CC) -o $@ $(CFLAGS) -c $<
+
+$(TCP_TSTAMP): $(TCP_TSTAMP_OBJ)
+	$(CC) -o $@ $(TCP_TSTAMP_OBJ) $(CFLAGS)
 
 .PHONY: clean
 
